<resources>
    <string name="app_name">Sunway Study Planner</string>
    <string name="assignment_title_hint">Enter a title for the assignment.</string>
    <string name="assignment_title_label">Title</string>
    <string name="assignment_details_label">Due Date</string>
    <string name="assignment_solved_label">Finished </string>
    <string name="date_picker_title">Date of Assignment:</string>
    <string name="new_assignment">New assignment</string>
    <string name="assignment_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d assignments</string>
    <string name="at_sign">\@</string>
    <string name="toast_assignment_delete">Assignment has been deleted</string>
    <string name="title_home">Home</string>
    <string name="title_crime">Assignments</string>
    <string name="title_preferences">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="switch_title">Settings option</string>
    <string name="switch_summary">Turn this option on or off</string>
    <string name="display_text">Display Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_date_title">Select Meeting Date</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="time_picker_title">Time of Meeting:</string>

    <string name="dark_mode">Night Mode</string>
    <string name="enable_mode">Enable Dark Mode</string>
    <string name="dialog_time_title">Select time of crime</string>

    <string name="assignment_priority">Priority of assignment</string>
    <string name="assignment_high">High</string>
    <string name="assignment_delete">Delete assignment</string>
    <string name="assignment_add">Add assignment</string>

    <string name="semester_number">Semester 6</string>
    <string name="subject_mobile">Mobile Application Development</string>
    <string name="subject_data">Data Structure and Algorithm</string>
    <string name="subject_software">Software Management</string>
    <string name="subject_communication">Communication Skills</string>
    <string name="subject_operating">Operating System Fundamentals</string>
    <string name="subject_listing">Subject Listing</string>
    <string name="subject_list">List of current subjects</string>


    <string name="assign_title">Assignment Title</string>
    <string name="assign_name">Name </string>
    <string name="assign_due">Due on</string>
    <string name="assign_showdate">Show Date</string>
    <string name="assign_subj">Subject</string>


    <string name="sign_in">Sign in</string>
    <string name="assign_app">Assignment Application</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="toast_delete_crime">Crime has been deleted</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideassignment">Slideassignment</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="assignment_format_label">Format of Assignment</string>
    <string name="toast_format">Format selected</string>
    <string name="assignment_action_label">Actions</string>
    <string name="assignment_subject_label">Subject</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="crime_report">%1$s!
      The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no subject.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>


    <string name="pref_default_display_name">John Cena</string>
    <string name="pref_title_account_settings">Account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string-array name="themes">
        <item>Theme1</item>
        <item>Theme2</item>
    </string-array>

    <string name="OK"></string>
    <string name="def_theme">Theme1</string>
    <string name="theme_summary">Appearance</string>
    <string name="theme_dialog_title">Theme</string>
    <string name="settings">Settings</string>
</resources>





