<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"


    android:background="?attr/backgroundcolor">


 <TextView
     android:id="@+id/frag_create_booking_header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"

     android:text="@string/subject_listing"
     android:textColor="@color/colorPrimary"
     android:textSize="36sp"
     android:layout_marginLeft="70dp"/>

 <TextView
     android:id="@+id/frag_create_booking_subhead"
     style="?android:bottomDark"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/frag_create_booking_header"


     android:layout_marginTop="5dp"
     android:text="@string/subject_list"
     android:textColor="?attr/textcolor"
     android:textSize="18sp" />

 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">



  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:text="@string/subject_mobile"
      android:textStyle="bold"
      android:textColor="?attr/textcolor"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_errorgrey"
      android:layout_gravity="bottom"
      android:layout_marginLeft="140dp"
      android:background="?attr/cardbackground"
      />
 </LinearLayout>



 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/semester_number"
     android:textColor="?attr/textcolor"/>


 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">



  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:text="@string/subject_data"
      android:textStyle="bold"
      android:textColor="?attr/textcolor"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:layout_marginLeft="160dp"
      android:src="@drawable/ic_errorgrey"
      android:background="?attr/cardbackground"/>
 </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester_number"
        android:textColor="?attr/textcolor"/>

 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">



  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:text="@string/subject_software"
      android:textStyle="bold"
      android:textColor="?attr/textcolor"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_errorgrey"
      android:layout_gravity="bottom"
      android:layout_marginLeft="200dp"
      android:background="?attr/cardbackground"/>
 </LinearLayout>


 <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:text="@string/semester_number"
     android:textColor="?attr/textcolor"/>

 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">



  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:text="@string/subject_operating"
      android:textStyle="bold"
      android:textColor="?attr/textcolor"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_errorgrey"
      android:layout_gravity="bottom"
      android:layout_marginLeft="140dp"
      android:background="?attr/cardbackground"/>
 </LinearLayout>


 <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:text="@string/semester_number"
     android:textColor="?attr/textcolor"/>


 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">



  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:text="@string/subject_communication"
      android:textStyle="bold"
      android:textColor="?attr/textcolor"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_errorgrey"
      android:layout_gravity="bottom"
      android:layout_marginLeft="205dp"
      android:background="?attr/cardbackground"/>
 </LinearLayout>

 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/semester_number"
     android:textColor="?attr/textcolor"/>






</LinearLayout>


</ScrollView>
